[workspace]

members = [
    "auth",
    "json",
    "jwt",
    "logger",
    "module",
    "module_core"
] 

[profile.dev]
opt-level        = 0
debug            = true
rpath            = false
lto              = false
debug-assertions = true
codegen-units    = 1

[profile.release]
opt-level        = 3
debug            = false
rpath            = false
lto              = true
debug-assertions = false
codegen-units    = 1